# Cpp-OpenCV

./: CMakeLists.txt
src/: test.cpp  vo.cpp  vo2.cpp
src/.cache/clangd/index/: test.cpp.631BE257FFF64FE3.idx
